tests/ui/parser/lit-err-in-macro.stderr
error: suffixes on string literals are invalid
  --> $DIR/lit-err-in-macro.rs:8:4
   |
LL | f!("Foo"__);
   |    ^^^^^^^ invalid suffix `__`

warning: extern declarations without an explicit ABI are deprecated
  --> $DIR/lit-err-in-macro.rs:3:9
   |
LL |         extern $abi fn f() {}
   |         ^^^^^^ help: explicitly specify the "C" ABI: `extern "C"`
...
LL | f!("Foo"__);
   | ----------- in this macro invocation
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust future!
   = note: for more information, see issue #134986 <https://github.com/rust-lang/rust/issues/134986>
   = note: `#[warn(missing_abi)]` on by default
   = note: this warning originates in the macro `f` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error; 1 warning emitted

